openproject/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  namespace: openproject
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: openproject.flou21.de
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: openproject
            port:
              number: 8080
  - host: projects.flou21.de
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: openproject
            port:
              number: 8080
